tests/machine/x/cpp/right_join.error
/workspace/mochi/tests/machine/x/cpp/right_join.cpp:42:12: error: ‘o’ was not declared in this scope
   42 |   decltype(o) order;
      |            ^
/workspace/mochi/tests/machine/x/cpp/right_join.cpp:42:12: error: ‘o’ was not declared in this scope
/workspace/mochi/tests/machine/x/cpp/right_join.cpp: In lambda function:
/workspace/mochi/tests/machine/x/cpp/right_join.cpp:59:44: error: cannot convert ‘Order’ to ‘int’ in initialization
   59 |           __items.push_back(Result{c.name, o});
      |                                            ^
      |                                            |
      |                                            Order
/workspace/mochi/tests/machine/x/cpp/right_join.cpp:63:44: error: cannot convert ‘Order’ to ‘int’ in initialization
   63 |           __items.push_back(Result{c.name, o});
      |                                            ^
      |                                            |
      |                                            Order
/workspace/mochi/tests/machine/x/cpp/right_join.cpp: In function ‘int main()’:
/workspace/mochi/tests/machine/x/cpp/right_join.cpp:79:34: error: request for member ‘id’ in ‘entry.Result::order’, which is of non-class type ‘int’
   79 |         std::cout << entry.order.id;
      |                                  ^~
/workspace/mochi/tests/machine/x/cpp/right_join.cpp:83:34: error: request for member ‘total’ in ‘entry.Result::order’, which is of non-class type ‘int’
   83 |         std::cout << entry.order.total;
      |                                  ^~~~~
